tests/array/dynamic_index_loan_conflict_with_nested_struct_field.err.expected
error: at 9:13: [LT-LoanConflict] In function 'f', block 'entry': cannot write to 'c.arr[0].v': already borrowed by 'r'
   |
 9 |             c.arr[0i64].v = 7i64;
   |             ^^^^^^^^^^^^^^^^^^^^
  = note: borrow of 'c.arr[0].v' occurs here
   |
 8 |             r = &mut c.arr[copy i].v;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^
  hint: the borrow of 'r' is active until its last use or explicit unborrow.
